--- a/app1/dockerfile
+++ b/app1/dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="a0z9@rambler.ru"
 
 RUN mkdir /localdir && echo `date` > /localdir/data
 
-RUN data
+RUN date
 
 ENV VERSION 2.0
 WORKDIR /app2
