--- a/app-compose/docker-compose.yaml
+++ b/app-compose/docker-compose.yaml
@@ -2,26 +2,13 @@
 version: "3.9"
 
 services:
-  gst1:
-    image: docker/getting-started
-    ports:
-      - "8081:80"
-    
-    volumes:
-      - "vol2:/s1"
-      - "/s2"
-   
-    environment:
-      - PROD
-      - VERSION=1.0
-      - DOCK_HOST=dock01
 
   wapp1:
     build: ./wapp
     ports:
       - "8091:8080"
     environment:
-      - DOCK_HOST=$HOST_NAME
+      - DOCK_HOST=$HOSTNAME
     volumes:
       - "wapp_vol:/var/log/wapp"
     hostname: wapp
