--- a/app-library/docker-compose-old.yaml
+++ b/app-library/docker-compose-old.yaml
@@ -3,12 +3,6 @@ version: "3.9"
 services:
   mdb:
     build: ./db_scripts
-    healthcheck:
-      test: mysqlcheck -ppass library
-      interval: 3s
-      retries: 3
-      timeout: 3s
-      #    start_period: 60s
 
   web:
     build: ./web_scripts
@@ -21,8 +15,7 @@ services:
       - LOG_DIR=/var/log/web2_log
 
     depends_on: 
-      mdb:
-        condition: service_healthy 
+      - mdb 
     ports:
       - "8090:8080"
     volumes:
