--- a/app4-swarm/docker-compose.yaml
+++ b/app4-swarm/docker-compose.yaml
@@ -10,16 +10,17 @@ services:
     environment:
       - VERSION=1.0
       - DOCK_HOST=dock01
-    depends_on:
-      wapp1:
-        condition: service_healthy
+        #  depends_on:
+        #  wapp1:
+        # condition: service_healthy
     
     deploy:
       mode: replicated
       replicas: 2
-      limits:
-        cpus: '0.30'
-        memory: 10M    
+      resources:
+        limits:
+          cpus: '0.30'
+          memory: 10M    
 
   wapp1:
     image: a0z9/dock:wapp.0.5
@@ -30,11 +31,11 @@ services:
     
     volumes:
       - "wapp_vol:/var/log/wapp"
-    healthcheck:
-      test: wget -q --spider localhost:8080
-      interval: 4s
-      timeout: 3s
-      retries: 3
+        # healthcheck:
+        # test: wget -q --spider localhost:8080
+        #interval: 4s
+        #timeout: 3s
+        #retries: 3
     deploy:
       mode: replicated
       replicas: 3
